<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.prasanna.sltuseageapp.UI.HelpActivity">
    <LinearLayout
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_font_size"
            android:text="Peak Time"/>
        <TextView
            android:layout_marginLeft="50dip"
            android:layout_marginBottom="20dip"
            android:layout_width="match_parent"
            android:textSize="@dimen/help_font_size"
            android:layout_height="wrap_content"
            android:text="@string/peak_time"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_font_size"
            android:text="Off-Peak Time"/>
        <TextView
            android:layout_marginLeft="50dip"
            android:textSize="@dimen/help_font_size"
            android:layout_marginBottom="20dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/off_peak_time"/>
        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/help_font_size"
            android:layout_height="wrap_content"
            android:text="Peak Download Volume"/>
        <TextView
            android:layout_marginLeft="50dip"
            android:textSize="@dimen/help_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:text="@string/peak_download_volume"/>
        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/help_font_size"
            android:layout_height="wrap_content"
            android:text="Total Volume"/>
        <TextView
            android:layout_marginLeft="50dip"
            android:textSize="@dimen/help_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:text="@string/total_volume"/>
        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/help_font_size"
            android:layout_height="wrap_content"
            android:text="Transferred Volume"/>
        <TextView
            android:layout_marginLeft="50dip"
            android:textSize="@dimen/help_font_size"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dip"
            android:layout_height="wrap_content"
            android:text="@string/transfer_volume"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginBottom="20dip"
            android:layout_height="wrap_content"
            android:textSize="@dimen/help_font_size"
            android:text="@string/about"/>
    </LinearLayout>
</ScrollView>
